# MASSpy

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  develop-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  temp.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  FAQ.md  ISSUE_TEMPLATE.md  SUPPORT.md
.github/scripts/: clean.sh  execute-notebooks.sh
.github/workflows/: biosimulators_dispatch.yml  codeql-analysis.yml  lint.yml  main.yml  publish-docker-images.yml  publish-pkg-pypi.yml  python-publish.yml  run-tests.yml
docker/: Dockerfile  docker-entrypoint.sh  template.gurobi.lic
docker/cplex/: cplex.installer.properties
docker/docker-scripts/: docker-entrypoint.sh  pyinstall-solver.sh
docker/gurobi/: gurobi.lic.template
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat  references.bib  references.rst  requirements.txt  robots.txt  zreferences.bib  zreferences.rst
docs/additional/: code_repositories.rst  faqs.ipynb
docs/gallery/: index.rst
docs/installation/: advanced_docker.rst  docker.rst  docker_detailed.rst  quickstart.rst  solvers.rst
docs/maps/: sb2_glycolysis_map.json  sb2_pentose_phosphate_pathway_map.json
docs/tutorials/: cobra_to_mass.ipynb  compartments.ipynb  constructing_models.ipynb  dynamic_simulation.ipynb  ensemble_modeling.ipynb  enzyme_modules.ipynb  exporting_optimization_problems.ipynb  getting_started_with_masspy.ipynb  global_configuration.ipynb  import_export_optimization.ipynb  network_visualization.ipynb  plot_visualization.ipynb  quality_assurance.ipynb  reading_writing_models.ipynb  thermo_concentrations.ipynb
documentation_builder/: Attributes Function .ipynb  Building a Model WIP .ipynb  Building_a_Model.ipynb  COBRAPY VS. MASSPY.ipynb  COBRAPY_VS_MASSPY.ipynb  Getting Started MASSPY.ipynb  Getting_Started_with_MassPy.ipynb  Import & Export JSON.ipynb  Import_Export_JSON.ipynb  Makefile  Simulations & Visualizations.ipynb  Simulations_and_Visualizations.ipynb  Toy_Model.json  applications.rst  conf.py  constructing_models.ipynb  ensemble_modeling.ipynb  enzyme_modules.ipynb  faq.ipynb  getting_started_with_masspy.ipynb  global_configuration.ipynb  index.rst  make.bat  network_visualization.ipynb  quality_assurance.ipynb  reading_writing_models.ipynb  references.bib  requirements.txt  sb2_textbook.rst  thermo_concentrations.ipynb  zreferences.rst
documentation_builder/_additional/: init_conds_phosphate_trafficking.tex
documentation_builder/maps/: sb2_RBC_map.json  sb2_amp_salvage_network_map.json
documentation_builder/notebooks/: cobra_to_mass.ipynb  constructing_models.ipynb  dynamic_simulation.ipynb  ensemble_modeling.ipynb  enzyme_modules.ipynb  faq.ipynb  getting_started_with_masspy.ipynb  global_configuration.ipynb  network_visualization.ipynb  plot_visualization.ipynb  quality_assurance.ipynb  reading_writing_models.ipynb  thermo_concentrations.ipynb
documentation_builder/source/: conf.py  index.rst
mass/: __init__.py  config.py  exceptions.py
mass/analysis/: __init__.py  linear.py  network.py  pooling.py  stability.py  timescale_decomposition.py
mass/core/: Metabolite.py  __init__.py  _s_visualization.py  conversion.py  expressions.py  mass_configuration.py  mass_metabolite.py  mass_model.py  mass_reaction.py  mass_solution.py  massconfiguration.py  massmetabolite.py  massmodel.py  massreaction.py  masssolution.py  simulation.py  solution.py  testing.py  units.py  visualization.py
mass/enzyme_modules/: __init__.py  enzyme_module.py  enzyme_module_dict.py  enzyme_module_form.py  enzyme_module_reaction.py  enzyme_module_species.py
mass/enzymes/: __init__.py  enzyme_dict.py  enzyme_form.py  enzyme_model.py
mass/io/: __init__.py  dict.py  json.py  massef.py  sbml.py
mass/simulation/: __init__.py  ensemble.py  simulation.py
mass/test/: __init__.py  test_array.py  test_massmetabolite.py  test_massmodel.py  test_massreaction.py  unittest_MassMetabolite.py
mass/thermo/: __init__.py  conc_solution.py  conc_solver.py  ensemble.py
mass/util/: DictWithID.py  __init__.py  array.py  conversion.py  dict_with_id.py  expressions.py  matrix.py  qcqa.py  util.py  version_info.py
mass/visualization/: __init__.py  comparison.py  phase_portraits.py  time_profiles.py  visualization_util.py
masspy-notebooks/: execute-construction-notebooks.py
masspy-notebooks/catalytic-potential/: Construction_of_Non-personalized_Models.ipynb
masspy-workbooks/: execute-construction-notebooks.py
masspy-workbooks/Catalytic Potential/: Construction of Hexokinase Model.ipynb  Construction of Phosphofructokinase Model.ipynb  Construction of Pyruvate Kinase Model.ipynb
masspy-workbooks/SB2 Textbook Model Construction/: SB2 AMP Salvage Network.ipynb  SB2 Glycolysis.ipynb  SB2 Hemoglobin.ipynb  SB2 Pentose Phosphate Pathway.ipynb  SB2 Textbook Model.ipynb
masspy-workbooks/catalytic-potential/: Construction_of_Non-personalized_Models.ipynb
notebooks/: Notebook_Color_Legend.ipynb  execute-notebooks.py
notebooks/SB2/: SB2_AMPSalvageNetwork.ipynb  SB2_Glycolysis.ipynb  SB2_Hemoglobin.ipynb  SB2_PFK.ipynb  SB2_PentosePhosphatePathway.ipynb
notebooks/catalytic_potential/: Non-personalized_Models.ipynb
notebooks/test-models/: AMPSalvageNetwork_MassModel.ipynb  G6PDH2r_EnzymeModule.ipynb  Glycolysis_MassModel.ipynb  HEX1_EnzymeModule.ipynb  Hemoglobin_MassModel.ipynb  PFK_EnzymeModule.ipynb  PYK_EnzymeModule.ipynb  PentosePhosphatePathway_MassModel.ipynb
notebooks/test_data/: HEX1_EnzymeModule.ipynb  (+9 more)
release-notes/: 0.1.0.md  0.1.1.md  0.1.3.md  0.1.4.md  0.1.6.md  0.1.7.md  0.2.0.md  next-release.md
scripts/: build-all-documentation.sh  clean.sh  copy_models_to_test.py  execute-notebooks.py  execute_notebooks.py  make-additional-examples.sh  make-documentation-notebooks.sh  make-sb2-textbook.sh  make_test_models.sh  remake-documentation.sh  replace-package-models.py
test/: test_MassMetabolite.py  test_MassReaction.py
tests/: __init__.py  test_mass.py
(+307 files in other folders)
