title = "MASSpy TOML configuration file"

################################################################################
# Build tools configuration                                                    #
################################################################################

[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


################################################################################
# Lint tools configuration                                                     #
################################################################################
[tool.black]
line-length = 88
python-version = [
    "py36",
    "py37"
]


[tool.isort]
profile = "black"
src_paths = [
    "src/mass"
]
indent = 4
lines_after_imports = 2

################################################################################
# Testing configuration                                                        #
################################################################################

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.20
envlist = lint,
          safety,
          py3{6,7},
isolated_build = true
skip_missing_interpreters = true

[gh-actions]
python =
    3.6: lint, safety, py36
    3.7: lint, safety, py37


[testenv]
description = run the tests with pytest under given python version
deps =
    pytest
    pytest-cov
    pytest-raises
    coverage[toml]
commands =
    pytest --cov=mass --cov-report=term


[testenv:lint]
description = lint code using isort, black, and flake8 via pre-commit
passenv = *
skip_install = true
deps =
    pre-commit
commands =
    pre-commit install
    pre-commit run --all-files

[testenv:safety]
description = safety check installed dependencies for known security vulnerabilities.
deps =
    safety
commands =
    safety check --full-report

"""

################################################################################
# Testing tools configuration                                                  #
################################################################################

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/mass/test"
]


[tool.coverage.paths]
source = [
    "src/mass",
    "*/site-packages/mass"
]

[tool.coverage.run]
branch = true
parallel = true
concurrency = [
    "multiprocessing"
]
omit = [
    "*/mass/test/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover", # Have to re-enable the standard pragma
]
precision = 2
omit = [
    "*/mass/test/*"
]
