[metadata]
name = masspy
version = attr: mass.__version__
url = https://github.com/SBRG/MASSpy/
download_url = https://pypi.org/project/masspy/
project_urls =
    Source = https://github.com/SBRG/MASSpy/
    Documentation = https://masspy.readthedocs.io/
    DockerHub = https://hub.docker.com/r/sbrg/masspy/
    Tracker = https://github.com/SBRG/MASSpy/issues/
author = Zachary B. Haiman
author_email = zhaiman@eng.ucsd.edu
maintainer = Zachary B. Haiman
maintainer_email = zhaiman@eng.ucsd.edu
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = MASSpy is a package for dynamic modeling of biological processes.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    python
    metabolism
	biology
	constraint-based modeling
	linear programming
	mixed-integer
	optimization
	flux-balance analysis
	reconstruction
    dynamic simulation
    kinetic modeling
    ordinary differential equations

[options]
zip_safe = True
install_requires =
    cobra ~= 0.19.0
    depinfo
    libroadrunner ~= 2.0
    matplotlib ~= 3.2.0
    numpy ~= 1.19
    optlang <1.4.6
    pandas ~= 1.0
    scipy ~= 1.2
    six ~= 1.11
    sympy ~= 1.0
    tabulate ~= 0.8
python_requires = ~=3.6
include_package_data = True
packages = find:
package_dir =
	= src

[options.packages.find]
where = src
include =
    mass


[options.extras_require]
dev =
    bumpversion
    pre-commit
    tox
docs =
    escher
    ipykernel
    nbsphinx ~= 0.7
    notebook
    pandoc
    sphinx ~= 3.5
    sphinx-autoapi ~= 1.7
    sphinx_rtd_theme
    sphinxcontrib-bibtex ~= 2.2
tests =
    pytest
    pytest-cov
    coverage[toml]
all =
    %(dev)s
    %(docs)s


[flake8]
ignore = E203, E266, E501, W503, F401, C901
max-line-length = 88
max-complexity = 18
