[metadata]
name = masspy
version = attr: mass.__version__
url = https://github.com/SBRG/MASSpy/
download_url = https://pypi.org/project/masspy/
project_urls =
    Source = https://github.com/SBRG/MASSpy/
    Documentation = https://masspy.readthedocs.io/
    DockerHub = https://hub.docker.com/r/sbrg/masspy/
    Tracker = https://github.com/SBRG/MASSpy/issues/
author = Zachary B. Haiman
author_email = zhaiman@eng.ucsd.edu
maintainer = Zachary B. Haiman
maintainer_email = zhaiman@eng.ucsd.edu
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = MASSpy is a package for dynamic modeling of biological processes.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    python
    metabolism
	biology
	constraint-based modeling
	linear programming
	mixed-integer
	optimization
	flux-balance analysis
	reconstruction
    dynamic simulation
    kinetic modeling
    ordinary differential equations

[options]
zip_safe = True
install_requires =
    cobra
    libroadrunner
    numpy
    optlang
    pandas
    scipy
    six
    sympy
    tabulate
python_requires = ~=3.6
include_package_data = True
packages = find:
package_dir =
	= src

[options.packages.find]
where = src
include =
    mass


[options.extras_require]
visualization =
    matplotlib
development =
    bumpversion
    pre-commit
    towncrier
    tox
docs =
    escher
    ipykernel
    nbsphinx
    notebook
    pandoc
    sphinx
    sphinx-autoapi
    sphinx_rtd_theme
    sphinxcontrib-bibtex ~= 2.2
    %(visualization)s
tests =
    pytest
    pytest-cov
    coverage[toml]
all =
    %(development)s
    %(docs)s


[flake8]
ignore = E203, E266, E501, W503, F401, C901
max-line-length = 88
max-complexity = 18
