[bumpversion]
current_version = 0.1.3.a7
commit = True
tag = True
tag_name = v{new_version}
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[.dev|a|b|rc|.post]*)(?P<num>\d*)
serialize = 
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = final_release
first_value = .dev
values = 
	.dev
	a
	b
	rc
	final_release
	.post

[bumpversion:file:src/mass/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:docker/Dockerfile]
search = mass_version={current_version}
replace = mass_version={new_version}

[metadata]
name = masspy
version = attr: mass.__version__
url = https://github.com/SBRG/MASSpy/
download_url = https://pypi.org/project/masspy/
project_urls = 
	Source = https://github.com/SBRG/MASSpy/
	Documentation = https://masspy.readthedocs.io/
	DockerHub = https://hub.docker.com/r/sbrg/masspy/
	Tracker = https://github.com/SBRG/MASSpy/issues/
author = Zachary B. Haiman
author_email = zhaiman@eng.ucsd.edu
maintainer = Zachary B. Haiman
maintainer_email = zhaiman@eng.ucsd.edu
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = MASSpy is a package for dynamic modeling of biological processes.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 
	python
	metabolism
	biology
	constraint-based modeling
	linear programming
	mixed-integer
	optimization
	flux-balance analysis
	reconstruction
	dynamic simulation
	kinetic modeling
	ordinary differential equations

[options]
zip_safe = True
install_requires = 
	cobra
	libroadrunner
	matplotlib
	numpy
	optlang
	pandas
	scipy
	six
	sympy
	tabulate
python_requires = ~=3.6
include_package_data = True
packages = find:
package_dir = 
	= src

[options.packages.find]
where = src
include = 
	mass

[options.extras_require]
dev = 
	bumpversion
	pre-commit
	towncrier
	tox
docs = 
	escher
	ipykernel
	nbsphinx
	notebook
	pandoc
	sphinx
	sphinx-autoapi
	sphinx_rtd_theme
	sphinxcontrib-bibtex ~= 2.2
tests = 
	pytest
	pytest-cov
	coverage[toml]
all = 
	%(dev)s
	%(docs)s

[flake8]
ignore = E203, E266, E501, W503, F401, C901
max-line-length = 88
max-complexity = 18
